--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -117,6 +117,7 @@
       {% endif %}
       {% if author.zhihu %}
         <li><a href="{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu"></i> 知乎</a></li>
+      {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
 {% endif %}
